# CV---Boat-Detector

./: .gitignore  CMakeLists.txt  README.md  mAP@1000iter_KAGLLE-Notaugmented-singleclass.txt  mAP@1000iter_KAGLLE-augmented-singleclass.txt  mAP@2000iter.txt  mAP@2000iter_Notaugmented-singleclass.txt  mAP@2000iter_augmented-singleclass.txt
cfg/: yolo-obj_augmented.weights  yolo-obj_gradient.weights  yolo-obj_naive.weights
darknet_cfg/: yolo-obj.cfg  yolo-obj_final.weights
darknet_trained/: yolo-obj.weights
data/: test.txt  train.txt
data/train/: abendstimmung-sunset-evening-sky-817715.json  (+2692 more)
img/: dataset_60cf15a4ac5c1c87c65cbf96_label_dispersion_2021-07-04T13_55_34.346Z.csv
include/: CMakeLists.txt  dataugmentation.cpp  dataugmentation.h  labeltxt.cpp  labeltxt.h
src/: bowPredictor.cpp  main.cpp  predict.cpp  preprocess.cpp  yoloPredictor.cpp
test/: 1-VVAG66PR.json  1-VVAG66PR.txt  20110722_Venice_Canal_Grande_4072.json  20110722_Venice_Canal_Grande_4072.txt  CRUISE_Charming.json  CRUISE_Charming.txt  Gondolas-regatta-Venice-Grand-Canal.json  Gondolas-regatta-Venice-Grand-Canal.txt  K-SHIPS-1-1920x1280.json  K-SHIPS-1-1920x1280.txt  MarkAlbertazzi-1-4_3museumShips.json  MarkAlbertazzi-1-4_3museumShips.txt  Sailing-well-boat-Jehu-visitaland2017-DE.json  Sailing-well-boat-Jehu-visitaland2017-DE.txt  cruise_ships_images.json  cruise_ships_images.txt  default.json  default.txt  download.json  download.txt  id360-motoscafo-canal-grande-full.json  id360-motoscafo-canal-grande-full.txt  images.json  images.txt  maxresdefault.json  maxresdefault.txt
(+79 files in other folders)
